je sais pas nouvelle div

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <body>
         <div id="liseret"></div>
         <div id="toto">
-            <h1 id="title">
-                Garance Defrel
+            <div class="defrel">
+                <h1 id="title">Garance Defrel</h1>
                 <a href="images/garance.jpg" id="photoLink"><img id= "photo" src="./images/garance.jpg" alt="Photo de Garance Defrel"></a>
-            </h1>
+            </div>
             <div id="contenu">
                 <section>
                     <h2>Mon expérience</h2>
